Fix the unreadable wishlist button on products

--- a/src/assets/styles/components/Product.css
+++ b/src/assets/styles/components/Product.css
@@ -3,6 +3,7 @@
         text-decoration: none;
         color: var(--text-color);
         transition: color 0.3s;
+
         &:hover {
             color: var(--primary);
         }
@@ -19,22 +20,44 @@
             height: auto;
         }
 
-        & svg {
+        .heart {
             position: absolute;
-            top: 20px;
-            right: 20px;
+            top: 10px;
+            right: 10px;
             cursor: pointer;
-            fill: var(--text-color);
-            transition: fill 0.3s;
+            background-color: #fff;
+            border: 1px solid var(--border-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5px;
+            border-radius: 50%;
+            transition: .3s ease all;
+
+            & svg {
+                fill: #000;
+                transition: .3s ease all;
+            }
 
             &:hover {
-                fill: var(--primary);
+                background-color: rgb(223, 69, 69);
+                border: 1px solid transparent;
+
+                & svg {
+                    fill: #fff;
+                }
             }
         }
-        & svg.active {
-            fill: red;
+        .heart.active {
+            background-color: rgb(223, 69, 69);
+            border: 1px solid transparent;
+
+            & svg {
+                fill: #fff;
+            }
         }
-        
+
+
         .add {
             position: absolute;
             left: 0;
